--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_ENGINE=django.db.backends.postgresql
 DB_NAME=clms_d0kk
 DB_USER=clms_d0kk_user
 DB_PASSWORD=JjE2K8GdpXSX1VFNoQIy1umwqiC1wBcu
-DB_HOST=dpg-d6cqpspr0fns739e96ag-a
+DB_HOST=dpg-d6cqpspr0fns739e96ag-a.oregon-postgres.render.com
 DB_PORT=5432
 NEXT_PUBLIC_DJANGO_API_URL=https://backend-te21.onrender.com
 DJANGO_SETTINGS_MODULE=config.settings
